# RecipePrep

./: .env.example  .gitignore  DataPrcoessing_1.ipynb  RAG_health_score.py  RAG_health_score_ver5.ipynb  README.md  README_2.md  README_archive.md  RecipeGenerator_ver4.ipynb  RecipeGenerator_ver7_UI.ipynb  SinglePrompt_v1.ipynb  pyproject.toml  recipe_filter.ipynb  recipe_relevance_ver3.py
Archive_notebook/: DataPrcoessing_1.ipynb  RAG_health_score_ver5.ipynb  RecipeGenerator_ver7_UI.ipynb  SinglePrompt_v1.ipynb
Helpers/: food_nutrient_mapping_helpder.py  recipe_dataset_gen.py  similarity_search.py  testing_dataset_gen.py
app/: __init__.py  gradio_app.py
configs/: default.yaml  evaluation.yaml
datasets/: filtered_recipes_merged.json
datasets/Processed_Recipes/: processed_recipes_init_200_batch_1.json  processed_recipes_init_200_batch_2.json
ingre_nutrition_map/: ingredient_nutrient_map.json
scripts/: build_cnf_index.py  build_nutrient_map.py  build_retrievers.py  collect_ingredients.py  evaluate_recipe.py  filter_recipes.py  generate_recipe.py  match_ingredients.py  process_recipes.py  run_pipeline.py  sample_recipes.py  score_recipes.py
src/recipeprep/: __init__.py  config.py  schemas.py
src/recipeprep/data/: __init__.py  (+5 more)
tests/: test_dataset_sampling.py  test_evaluation.py  test_generation.py  test_gradio_app.py  test_health_score.py  test_ingredient_matching.py  test_nutrient_client.py  test_quantity_and_units.py  test_recipe_filtering.py  test_recipe_processing.py  test_retrieval_index.py  test_run_pipeline.py  test_schemas.py  test_vector_store.py
(+23 files in other folders)
