[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipeprep"
version = "0.1.0"
description = "A personalized recipe generation and nutrition evaluation pipeline."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "RecipePrep contributors" },
]
dependencies = [
    "chromadb>=0.5,<2",
    "faiss-cpu>=1.8,<2",
    "jq>=1.8,<2",
    "langchain>=0.3,<2",
    "langchain-chroma>=0.2,<2",
    "langchain-community>=0.3,<2",
    "langchain-openai>=0.2,<2",
    "langchain-text-splitters>=0.3,<2",
    "nltk>=3.9,<4",
    "numpy>=1.26,<3",
    "openai>=1.50,<3",
    "pandas>=2.2,<3",
    "pydantic>=2.8,<3",
    "PyYAML>=6,<7",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
app = [
    "gradio>=5,<7",
]
notebooks = [
    "ipykernel>=6.29,<8",
    "jupyterlab>=4.2,<5",
    "matplotlib>=3.9,<4",
]
dev = [
    "mypy>=1.11,<2",
    "pre-commit>=3.8,<5",
    "pytest>=8.3,<10",
    "pytest-cov>=5,<8",
    "ruff>=0.7,<1",
    "types-PyYAML>=6.0,<7",
    "types-requests>=2.32,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
recipeprep = ["py.typed", "generation/prompt_text/*.md"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
packages = ["recipeprep"]
strict = true
